[package]
name = "config_loaders_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
parking_lot = "0.12.3"
anyhow = "1.0.79"
serde = { version = "1.0.192", features = ["derive"] }
toml = "0.8.8"
notify = "6.1.1"
serde_derive = "1.0.192"
tokio = { version = "1.33.0", features = ["full"] }
lazy_static = "1.4.0"
